infrastructure/llama-qwen35-35b-q3/llama-qwen35-35b-q3-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: llama-qwen35-35b-q3
spec:
  replicas: 1
  serviceName: llama-qwen35-35b-q3
  selector:
    matchLabels:
      app: llama-qwen35-35b-q3
  template:
    metadata:
      labels:
        app: llama-qwen35-35b-q3
    spec:
      runtimeClassName: nvidia
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.present
                operator: Exists
      tolerations:
      - effect: NoSchedule
        key: node.mmontes.io/type
        value: compute-xlarge

      containers:
      - name: llama-server
        image: ghcr.io/ggml-org/llama.cpp:full-cuda13-b8496
        args:
          - --server
          - --model
          - /models/unsloth_Qwen3.5-35B-A3B-GGUF_Qwen3.5-35B-A3B-Q3_K_M.gguf
          - --alias
          - qwen35-35b-3q
          - --host
          - 0.0.0.0
          - --port
          - "8080"
          - --n-gpu-layers
          - "999"
          - --ctx-size
          - "0" # 262144
          - --cache-type-k
          - q8_0
          - --cache-type-v
          - q8_0
          - --flash-attn
          - "on"
          - --no-mmap
          - --batch-size
          - "2048"
          - --ubatch-size
          - "2048"
          - --metrics
        ports:
        - containerPort: 8080
          name: api
        resources:
          requests:
            cpu: "1"
            memory: 2Gi
          limits:
            memory: 8Gi
            nvidia.com/gpu: "1"
        volumeMounts:
        - name: models
          mountPath: /models
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 45
          periodSeconds: 10

  volumeClaimTemplates:
  - metadata:
      name: models
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 30Gi
      storageClassName: topolvm
